test/sema/exercise/struct_return.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {}

struct S2 {}

fn foo(s: S): S {
  return S {};
}

fn bar(s: S): S {
  return S2 {};
  // CHECK: [[# @LINE - 1 ]]:10: error: unexpected return type
}

fn main(): void {
}

